<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="P30_ManualControl" Id="{98ee4f4f-99e9-426e-9dfa-55ddf51d552b}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P30_ManualControl
VAR_INPUT
	state_Control	: INT; // 10:EnableControl
END_VAR
VAR
	i 	: INT;
	
	Temp_1_Ramping:ARRAY[1..6]OF  INT;
	Temp_1_target: ARRAY[1..6]OF  INT;
	Temp_1_BufferTarget: ARRAY[1..6]OF  INT;


	
	
	

END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[FOR i:=1 TO 12 DO
	IF GVL_IO.aMaxValueController[i] <> 0 THEN
		GVL_IO.aController[i].nState := state_Control;
		GVL_IO.aController[i].nRampTime := GVL_IO.aController_RampTime[i];
		GVL_IO.aController[i].rTargetValue := GVL_IO.aController_TV[i] / GVL_IO.aMaxValueController[i] * GVL_IO.EL3064MaxValueH; //Input Set Value
		GVL_IO.aAnalogOutputIO[i] := LREAL_TO_INT(GVL_IO.aController[i].rControlValue); //Write to Device
		
		GVL_IO.aController_PV[i] := GVL_IO.aAnalogInputIO[i] / (GVL_IO.EL3064MaxValueH * GVL_IO.aMaxValueController[i]);
		GVL_IO.aController_CV[i] := LREAL_TO_REAL((GVL_IO.aController[i].rControlValue / GVL_IO.EL3064MaxValueH)*GVL_IO.aMaxValueController[i]);
		GVL_IO.aController[i]();
	END_IF
END_FOR

(* Furnace Temperature Controller *)
// Modbus 6EA 통신 으로 값 설정 및  읽기

]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>